--- a/index.html
+++ b/index.html
@@ -28,26 +28,87 @@
     </div>
     <header>
         <div class="row">
-            <div class="container">
+            <div class="container__header">
                 <div class="header__column">
                     <h1 class="header__text">Beautiful React Templates <span class="purple">for you.</span></h1>
                     <p>Our templates are easy to setup, understand and customize. Fully modular components with a
                         variety of
                         pages and components.</p>
-                    <form action="">
-                        <input type="email" placeholder="Your E-mail Address" required>
-                        <button class="btn">Get started</button>
+                    <form>
+                        <input class="input__border" type="email" placeholder="     Your E-mail Address" required>
+                        <button class="input__button btn btn__form">Get started</button>
                     </form>
                     <h5>OUR TRUSTED CUSTOMERS</h5>
-                    <img src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
+                    <img class="trustedcustomers" src="./assets/customers-logo-strip.680ac7c2e8ae28161d2c.png" alt="">
                 </div>
                 <figure class="header__image">
-                    <img class="img__header--size" src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="">
+                    <img class="img__header--size"
+                        src="./assets/design-illustration-2.6da6a00b20c07c4a9b65d1870679e1b8.svg" alt="">
                 </figure>
             </div>
 
         </div>
     </header>
+    <main>
+        <section id="features">
+            <div class="container">
+                <div class="row">
+                    <div class="text__top--centre">
+                    <h3><span class="purple">FEATURES</span></h3>
+                    <h1 class="features__title">We have Amazing <span class="purple">Service.</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore et dolore magna aliqua.</p>
+                    </div>
+                    <div class="services">
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                            <div class="service__text">
+                                <h4>Secure</h4>
+                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+                            <div class="service__text">
+                                <h4>24 / 7 Support</h4>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+                            <div class="service__text">
+                                <h4>Customizable</h4>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+                            <div class="service__text">
+                                <h4>Reliable</h4>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                            <div class="service__text">
+                                <h4>Fast</h4>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
+                        </div>
+                        <div class="service">
+                            <img class="bubble__img" src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+                            <div class="service__text">
+                                <h4>Easy</h4>
+                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </div>
+
+        </section>
+    </main>
 </body>
 
 </html>
