--- a/index.html
+++ b/index.html
@@ -54,59 +54,121 @@
             <div class="container">
                 <div class="row">
                     <div class="text__top--centre">
-                    <h3><span class="purple">FEATURES</span></h3>
-                    <h1 class="features__title">We have Amazing <span class="purple">Service.</span></h1>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
-                        labore et dolore magna aliqua.</p>
+                        <h3><span class="purple">FEATURES</span></h3>
+                        <h1 class="features__title">We have Amazing <span class="purple">Service.</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua.</p>
                     </div>
                     <div class="services">
                         <div class="service">
-                            <img class="bubble__img" src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg" alt="">
+                            <img class="bubble__img" src="./assets/shield-icon.daefe14b320b14fbd9cbd18908ac93ec.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>Secure</h4>
-                                <p>We strictly only deal with vendors that provide top notch security.</p>
+                                <p class="service__para">We strictly only deal with vendors that provide top notch
+                                    security.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <img class="bubble__img" src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg" alt="">
+                            <img class="bubble__img" src="./assets/support-icon.f9253ffa8cb6ffde5bbaa05eb5136375.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>24 / 7 Support</h4>
-                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis
+                                    nostrud.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <img class="bubble__img" src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg" alt="">
+                            <img class="bubble__img" src="./assets/customize-icon.367468c90fd796009b97fbfba67b2c6a.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>Customizable</h4>
-                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis
+                                    nostrud.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <img class="bubble__img" src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg" alt="">
+                            <img class="bubble__img" src="./assets/reliable-icon.1367510a8f0a1bec76dc425d25f92f43.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>Reliable</h4>
-                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis
+                                    nostrud.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <img class="bubble__img" src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg" alt="">
+                            <img class="bubble__img" src="./assets/fast-icon.dbb971a73d4805d2fc3bcdacdb55beba.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>Fast</h4>
-                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis
+                                    nostrud.</p>
                             </div>
                         </div>
                         <div class="service">
-                            <img class="bubble__img" src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg" alt="">
+                            <img class="bubble__img" src="./assets/simple-icon.673b7e1750b2a4ef32907fc164828d00.svg"
+                                alt="">
                             <div class="service__text">
                                 <h4>Easy</h4>
-                                <p>Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis nostrud.</p>
+                                <p class="service__para">Lorem ipsum donor amet siti ceali ut enim ad minim veniam, quis
+                                    nostrud.</p>
                             </div>
                         </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="qualitywork__container--wrapper">
+                    <div class="qualitywork__container">
+                        <h3><span class="purple">QUALITY WORK</span></h3>
+                        <h1 class="features__title">Designed & Developed by <span class="purple">Professionals.</span>
+                        </h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco
+                            laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <button class="btn btn__qw">Learn more</button>
+                    </div>
+                    <figure>
+                        <img class="qualitywork__image" src="./assets/hero-screenshot-1.40a097b525c2f8c9808e.png"
+                            alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <figure>
+                    <img class="easy__imgsize" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+                </figure>
+                <div class="get__started">
+                    <h3><span class="purple">STEPS</span></h3>
+                    <h1 class="features__title">Easy to<span class="purple">Get Started.</span></h1>
+                    <div class="steps__text--wrapper">
+                        <h3>01</h3>
+                        <div class="para__wrapper">
+                        <p>Register</p>
+                        <p>Create an account using Google or Facebook</p>
+                    </div>
+                    </div>
+                    <div class="steps__text--wrapper">
+                        <h3>02</h3>
+                        <div class="para__wrapper">
+                        <p>Download</p>
+                        <p>Browse and Download the template that you like from the marketplace.</p>
+                    </div>
+                    </div>
+                    <div class="steps__text--wrapper">
+                        <h3>03</h3>
+                        <div class="para__wrapper">
+                        <p>Run</p>
+                        <p>Follow the instructions to setup and customize the template to your needs</p>
+                    </div>
                     </div>
 
                 </div>
             </div>
-
         </section>
     </main>
 </body>
