--- a/index.html
+++ b/index.html
@@ -138,33 +138,33 @@
             </div>
         </section>
         <section>
-            <div class="row">
+            <div class="row row__getstarted">
                 <figure>
                     <img class="easy__imgsize" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
                 </figure>
                 <div class="get__started">
                     <h3><span class="purple">STEPS</span></h3>
-                    <h1 class="features__title">Easy to<span class="purple">Get Started.</span></h1>
+                    <h1 class="features__title">Easy to<span class="purple"> Get Started.</span></h1>
                     <div class="steps__text--wrapper">
-                        <h3>01</h3>
+                        <h3 class="number__big">01</h3>
                         <div class="para__wrapper">
-                        <p>Register</p>
-                        <p>Create an account using Google or Facebook</p>
-                    </div>
-                    </div>
-                    <div class="steps__text--wrapper">
-                        <h3>02</h3>
-                        <div class="para__wrapper">
-                        <p>Download</p>
-                        <p>Browse and Download the template that you like from the marketplace.</p>
-                    </div>
+                            <p>Register</p>
+                            <p>Create an account using Google or Facebook</p>
+                        </div>
                     </div>
                     <div class="steps__text--wrapper">
-                        <h3>03</h3>
+                        <h3 class="number__big">02</h3>
                         <div class="para__wrapper">
-                        <p>Run</p>
-                        <p>Follow the instructions to setup and customize the template to your needs</p>
+                            <p>Download</p>
+                            <p>Browse and Download the template that you like from the marketplace.</p>
+                        </div>
                     </div>
+                    <div class="steps__text--wrapper">
+                        <h3 class="number__big">03</h3>
+                        <div class="para__wrapper">
+                            <p>Run</p>
+                            <p>Follow the instructions to setup and customize the template to your needs</p>
+                        </div>
                     </div>
 
                 </div>
