--- a/index.html
+++ b/index.html
@@ -138,9 +138,9 @@
             </div>
         </section>
         <section>
-            <div class="row row__getstarted">
-                <figure>
-                    <img class="easy__imgsize" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
+            <div class="row row__wrapper">
+                <figure class="steps__figure--wrapper">
+                    <img class="steps__figure--size" src="./assets/hero-screenshot-2.241aac1fbc66db29d873.png" alt="">
                 </figure>
                 <div class="get__started">
                     <h3><span class="purple">STEPS</span></h3>
@@ -148,26 +148,56 @@
                     <div class="steps__text--wrapper">
                         <h3 class="number__big">01</h3>
                         <div class="para__wrapper">
-                            <p>Register</p>
+                            <p class="sub-title__bold">Register</p>
                             <p>Create an account using Google or Facebook</p>
                         </div>
                     </div>
                     <div class="steps__text--wrapper">
                         <h3 class="number__big">02</h3>
                         <div class="para__wrapper">
-                            <p>Download</p>
+                            <p class="sub-title__bold">Download</p>
                             <p>Browse and Download the template that you like from the marketplace.</p>
                         </div>
                     </div>
                     <div class="steps__text--wrapper">
                         <h3 class="number__big">03</h3>
                         <div class="para__wrapper">
-                            <p>Run</p>
+                            <p class="sub-title__bold">Run</p>
                             <p>Follow the instructions to setup and customize the template to your needs</p>
                         </div>
                     </div>
 
                 </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="values__items--wrapper">
+                <div class="value__side--wrapper">
+                    <h3><span class="purple">VALUES</span></h3>
+                    <h1>We Always Abide by Our <span class="purple">Principles.</span></h1>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                        labore
+                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
+                        ut
+                        aliquip ex ea commodo consequat.</p>
+                    <div class="value__title--wrapper">
+                        <img class="value__img" src="./assets/dollar-sign-solid.svg" alt="">
+                        <h2>Affordable</h2>
+                    </div>
+                    <p class="value__text--para">We promise to offer you the best rate we can - at par with the industry standard.</p>
+                    <div class="value__title--wrapper">
+                        <img class="value__img" src="./assets/bag-shopping-solid.svg" alt="">
+                        <h2>Professionalism</h2>
+                    </div>
+                    <p class="value__text--para">We assure you that our templates are designed and created by professional designers.</p>
+                    <button class="btn">Learn More</button>
+                </div>
+                <figure class="steps__figure--wrapper">
+                    <img class="steps__figure--size"
+                        src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                </figure>
+            </div>
             </div>
         </section>
     </main>
