--- a/index.html
+++ b/index.html
@@ -173,34 +173,202 @@
         <section>
             <div class="row">
                 <div class="values__items--wrapper">
-                <div class="value__side--wrapper">
-                    <h3><span class="purple">VALUES</span></h3>
-                    <h1>We Always Abide by Our <span class="purple">Principles.</span></h1>
+                    <div class="value__side--wrapper">
+                        <h3><span class="purple">VALUES</span></h3>
+                        <h1>We Always Abide by Our <span class="purple">Principles.</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore
+                            et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+                            nisi
+                            ut
+                            aliquip ex ea commodo consequat.</p>
+                            <div class="value__both_block--wrapper">
+                        <div class="value__block--wrap">
+                            <div class="value__title--wrapper">
+                                <img class="value__img" src="./assets/dollar-sign-solid.svg" alt="">
+                                <h2>Affordable</h2>
+                            </div>
+                            <p class="value__text--para">We promise to offer you the best rate we can - at par with the
+                                industry standard.</p>
+                        </div>
+                        <div class="value__block--wrap">
+                            <div class="value__title--wrapper">
+                                <img class="value__img value__img--red" src="./assets/bag-shopping-solid.svg" alt="">
+                                <h2>Professionalism</h2>
+                            </div>
+                            <p class="value__text--para">We assure you that our templates are designed and created by
+                                professional designers.</p>
+                        </div>
+                    </div>
+                        <button class="btn">Learn More</button>
+                    </div>
+                    <figure class="steps__figure--wrapper">
+                        <img class="steps__figure--size"
+                            src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
+                    </figure>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="title__plans">
+                    <h3 class="purple">PRICING</h3>
+                    <h1>Reasonable & Flexible <span>Plans.</span></h1>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
                         labore
-                        et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi
-                        ut
-                        aliquip ex ea commodo consequat.</p>
-                    <div class="value__title--wrapper">
-                        <img class="value__img" src="./assets/dollar-sign-solid.svg" alt="">
-                        <h2>Affordable</h2>
-                    </div>
-                    <p class="value__text--para">We promise to offer you the best rate we can - at par with the industry standard.</p>
-                    <div class="value__title--wrapper">
-                        <img class="value__img" src="./assets/bag-shopping-solid.svg" alt="">
-                        <h2>Professionalism</h2>
-                    </div>
-                    <p class="value__text--para">We assure you that our templates are designed and created by professional designers.</p>
-                    <button class="btn">Learn More</button>
+                        et dolore magna aliqua.</p>
                 </div>
-                <figure class="steps__figure--wrapper">
-                    <img class="steps__figure--size"
-                        src="./assets/prototype-illustration.21bc4b3f612a2f257c3d361067582485.svg" alt="">
-                </figure>
+                <div class="plans">
+                    <div class="plan">
+                        <div class="top__border">
+                            <h3>PERSONAL</h3>
+                            <p class="price">$17.99</p>
+                            <p>MONTHLY</p>
+                        </div>
+                        <div class="middle__border">
+                            <h4>For Individuals</h4>
+                            <p>30 Templates</p>
+                            <p>7 Landing Pages</p>
+                            <p>12 Internal Pages</p>
+                            <p>Basic Assistance</p>
+                        </div>
+                        <div class="bottom__border">
+                            <button class="buynow1">BUY NOW</button>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div class="color__businessplan">
+                            <div class="top__border business__top--border">
+                                <h3>BUSINESS</h3>
+                                <p class="price">$37.99</p>
+                                <p>MONTHLY</p>
+                            </div>
+                            <div class="middle__border">
+                                <h4>For Small Businesses</h4>
+                                <p>60 Templates</p>
+                                <p>15 Landing Pages</p>
+                                <p>22 Internal Pages</p>
+                                <p>Priority Assistance</p>
+                            </div>
+                            <div class="bottom__border">
+                                <button class="buynow2">BUY NOW</button>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="plan">
+                        <div class="top__border enterprise__top--border">
+                            <h3>ENTERPRISE</h3>
+                            <p class="price">$57.99</p>
+                            <p>MONTHLY</p>
+                        </div>
+                        <div class="middle__border">
+                            <h4>For Large Companies</h4>
+                            <p>90 Templates</p>
+                            <p>27 Landing Pages</p>
+                            <p>37 Internal Pages</p>
+                            <p>Personal Assistance</p>
+                        </div>
+                        <div class="bottom__border">
+                            <button class="buynow3">BUY NOW</button>
+                        </div>
+                    </div>
+                </div>
             </div>
+        </section>
+        <section>
+            <div class="row">
+                <div class="testimonials__wrapper">
+                    <figure class="figure__size">
+                        <img class="figure__size" src="./assets/love-illustration.c759090fa833369ad6ffb6eb19cacb3e.svg"
+                            alt="">
+                    </figure>
+                    <div>
+                        <h3><span class="purple">TESTIMONIALS</span></h3>
+                        <h1>Our Clients <span class="purple">Love Us.</span></h1>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut
+                            labore et dolore magna aliqua enim ad minim veniam.</p>
+                        <figure>
+                            <img src="./assets/Screenshot 2023-11-08 154249.png" alt="">
+                        </figure>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="row banner__size">
+                <div class="banner__treact--background">
+                    <h2>Developers all over the world are happily using Treact.</h2>
+                    <button class="btn btn__banner">Get Started</button>
+                    <button class="btn btn__banner">Contact Us</button>
+                </div>
             </div>
         </section>
     </main>
+    <footer>
+        <div class="row">
+            <div class="links">
+                <div class="link">
+                    <ul>
+                        <li class="link__title">Main</li>
+                        <li>Blog</li>
+                        <li>FAQs</li>
+                        <li>Support</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <ul>
+                        <li class="link__title">Main</li>
+                        <li>Blog</li>
+                        <li>FAQs</li>
+                        <li>Support</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <ul>
+                        <li class="link__title">Main</li>
+                        <li>Blog</li>
+                        <li>FAQs</li>
+                        <li>Support</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <ul>
+                        <li class="link__title">Main</li>
+                        <li>Blog</li>
+                        <li>FAQs</li>
+                        <li>Support</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+                <div class="link">
+                    <ul>
+                        <li class="link__title">Main</li>
+                        <li>Blog</li>
+                        <li>FAQs</li>
+                        <li>Support</li>
+                        <li>About Us</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="footer__info">
+                <div class="footer__logo">
+                    <img class="nav__logo footer__logo--invert"
+                        src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
+                    <span class="treactinc">Treact Inc.</span>
+                </div>
+                <p>&copy; 2023 Inc. All rights Reserved. </p>
+                <li>
+                    <a href="https://www.facebook.com/"><button class="footer__button">F</button></a>
+                    <a href="https://twitter.com/?lang=en"><button class="footer__button">T</button></a>
+                    <a href="https://www.youtube.com/"><button class="footer__button">Y</button></a>
+                </li>
+            </div>
+        </div>
+
+    </footer>
 </body>
 
 </html>
