--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <div class="row">
-        <div class="nav">
+        <nav>
             <div class="logo__img--wrapper">
                 <img class="nav__logo" src="./assets/logo.2c489fc453a1783cbadacf914efa3df6.svg" alt="" />
                 <h1>Treact</h1>
@@ -24,6 +24,45 @@
                 <li class="nav__link"><a href="">Contact Us</li></a>
                 <li class="nav__link nav__login"><a href="">Login</li></a>
                 <button class="btn">Sign Up</button>
+            </ul>
+        </nav>
+        <button class="btn__menu" onclick="openMenu()">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                class="light___StyledMenuIcon-sc-lj69nl-15 bPlZcF">
+                <line x1="3" y1="12" x2="21" y2="12"></line>
+                <line x1="3" y1="6" x2="21" y2="6"></line>
+                <line x1="3" y1="18" x2="21" y2="18"></line>
+            </svg>
+        </button>
+        <div class="menu__backdrop">
+            <button class="btn__menu btn__menu--close" onclick="closeMenu()">
+                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"
+                    class="light___StyledCloseIcon-sc-lj69nl-14 brSrPp">
+                    <line x1="18" y1="6" x2="6" y2="18"></line>
+                    <line x1="6" y1="6" x2="18" y2="18"></line>
+                </svg>
+            </button>
+            <ul class="menu__links">
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()">About</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()">Blog</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()">Pricing</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()">Contact Us</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()">Login</a>
+                </li>
+                <li class="menu__list">
+                    <a href="#" class="menu__link" onclick="closeMenu()"><button class="btn">Sign Up</button></a>
+                </li>
             </ul>
         </div>
     </div>
@@ -183,24 +222,27 @@
                             nisi
                             ut
                             aliquip ex ea commodo consequat.</p>
-                            <div class="value__both_block--wrapper">
-                        <div class="value__block--wrap">
-                            <div class="value__title--wrapper">
-                                <img class="value__img" src="./assets/dollar-sign-solid.svg" alt="">
-                                <h2>Affordable</h2>
+                        <div class="value__both_block--wrapper">
+                            <div class="value__block--wrap">
+                                <div class="value__title--wrapper">
+                                    <img class="value__img" src="./assets/dollar-sign-solid.svg" alt="">
+                                    <h2>Affordable</h2>
+                                </div>
+                                <p class="value__text--para">We promise to offer you the best rate we can - at par with
+                                    the
+                                    industry standard.</p>
                             </div>
-                            <p class="value__text--para">We promise to offer you the best rate we can - at par with the
-                                industry standard.</p>
-                        </div>
-                        <div class="value__block--wrap">
-                            <div class="value__title--wrapper">
-                                <img class="value__img value__img--red" src="./assets/bag-shopping-solid.svg" alt="">
-                                <h2>Professionalism</h2>
+                            <div class="value__block--wrap">
+                                <div class="value__title--wrapper">
+                                    <img class="value__img value__img--red" src="./assets/bag-shopping-solid.svg"
+                                        alt="">
+                                    <h2>Professionalism</h2>
+                                </div>
+                                <p class="value__text--para">We assure you that our templates are designed and created
+                                    by
+                                    professional designers.</p>
                             </div>
-                            <p class="value__text--para">We assure you that our templates are designed and created by
-                                professional designers.</p>
                         </div>
-                    </div>
                         <button class="btn">Learn More</button>
                     </div>
                     <figure class="steps__figure--wrapper">
