--- a/index.html
+++ b/index.html
@@ -352,7 +352,7 @@
             <div class="links">
                 <div class="link">
                     <ul>
-                        <li class="link__title">Main</li>
+                        <li class="link__title">MAIN</li>
                         <li>Blog</li>
                         <li>FAQs</li>
                         <li>Support</li>
@@ -361,38 +361,38 @@
                 </div>
                 <div class="link">
                     <ul>
-                        <li class="link__title">Main</li>
-                        <li>Blog</li>
-                        <li>FAQs</li>
-                        <li>Support</li>
-                        <li>About Us</li>
+                        <li class="link__title">PRODUCT</li>
+                        <li>Log In</li>
+                        <li>Personal</li>
+                        <li>Business</li>
+                        <li>Team</li>
                     </ul>
                 </div>
                 <div class="link">
                     <ul>
-                        <li class="link__title">Main</li>
-                        <li>Blog</li>
-                        <li>FAQs</li>
-                        <li>Support</li>
-                        <li>About Us</li>
+                        <li class="link__title">PRESS</li>
+                        <li>Logos</li>
+                        <li>Events</li>
+                        <li>Stories</li>
+                        <li>Office</li>
                     </ul>
                 </div>
                 <div class="link">
                     <ul>
-                        <li class="link__title">Main</li>
-                        <li>Blog</li>
-                        <li>FAQs</li>
-                        <li>Support</li>
-                        <li>About Us</li>
+                        <li class="link__title">TEAM</li>
+                        <li>Career</li>
+                        <li>Founders</li>
+                        <li>Culture</li>
+                        <li>Onboarding</li>
                     </ul>
                 </div>
                 <div class="link">
                     <ul>
-                        <li class="link__title">Main</li>
-                        <li>Blog</li>
-                        <li>FAQs</li>
-                        <li>Support</li>
-                        <li>About Us</li>
+                        <li class="link__title">LEGAL</li>
+                        <li>GDPR</li>
+                        <li>Privacy Policy</li>
+                        <li>Terms of Service</li>
+                        <li>Disclaimer</li>
                     </ul>
                 </div>
             </div>
@@ -402,7 +402,7 @@
                         src="./assets/logo-light.d9a5d1b5be5ea077b26864fdfc2e96a4.svg" alt="">
                     <span class="treactinc">Treact Inc.</span>
                 </div>
-                <p>&copy; 2023 Inc. All rights Reserved. </p>
+                <p>&copy; 2024 Inc. All rights Reserved. </p>
                 <li>
                     <a href="https://www.facebook.com/"><button class="footer__button">F</button></a>
                     <a href="https://twitter.com/?lang=en"><button class="footer__button">T</button></a>
